Rearranged the project structure Made a really basic landing page with a simple text

--- a/views/main-view/mainpage.html
+++ b/views/main-view/mainpage.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timebooking-Calculator-2.0</title>
+    <title>Mainpage</title>
+    <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
-    <h1>Work in Progess</h1>
+    <div id="welcomeText"></div>
+    <script src="mainpage.js"></script>
+
 </body>
 </html>
