Added a navigation bar Refined the welcome message javascript committed Randomized the greetings message

--- a/views/main-view/mainpage.html
+++ b/views/main-view/mainpage.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
+    <div class="topnav">
+        <a href="#home" class="active">Home</a>
+        <a href="#contact">Contact</a> 
+    </div>
     <div id="welcomeText"></div>
     <script src="mainpage.js"></script>
-
 </body>
 </html>
