--- a/views/main-view/mainpage.css
+++ b/views/main-view/mainpage.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #000000 ;
+    background-color: #000000;
     color: #ffff;
     display: flex;
     justify-content: center;
@@ -10,26 +10,58 @@ body {
     overflow: hidden;
 }
 
+
+/* Top Navigation Bar */
+.topnav {
+    background-color: transparent;
+    overflow: hidden;
+    position: fixed;
+    color: white;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 1000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.topnav a {
+    float: left;
+    color: white;
+    padding: 14px 16px;
+    padding-left: 20px;
+    text-decoration: none;
+    font-size: 30px;
+    transition: all 0.3s ease-out;
+    transform: scale(1);
+}
+
+.topnav a:hover {
+    transform: scale(1.2);
+}
+
+.topnav a.active {
+    font-weight: bold;
+    transform: scale(1.1);
+}
+
+.topnav a.active:hover {
+    transform: scale(1.3);
+}
+
+
 /* Welcome Text */
 #welcomeText {
     font-size: 3rem;
     color: var(--text-color);
     text-align: center;
-    width: 100%;
-    border-right: 3px solid var(--text-color);
+    padding-left: 20px;
     white-space: nowrap;
-    overflow: hidden;
-    animation: 
-        typing 3s steps(30, end),
-        blink-caret 0.5s step-end infinite;
+    transition: all 0.3s ease-in-out;
 }
 
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: var(--text-color) }
+#welcomeText:hover {
+    transform: scale(1.2);
 }
