--- a/views/main-view/mainpage.css
+++ b/views/main-view/mainpage.css
@@ -93,6 +93,23 @@ button:hover {
     transform: scale(1.3);
 }
 
+.topnav a:first-child {
+    position: absolute;
+    left: 20px;
+    top: 52%;
+    transform: translateY(-50%);
+}
+
+.github-logo {
+    width: 40px;  /* Adjust size as needed */
+    height: 40px;  /* Adjust size as needed */
+}
+
+.github-logo:hover {
+    transform: scale(1.2);
+    transition: all 0.3s ease-out;
+}
+
 
 /* Welcome Text */
 #welcomeText {
