--- a/views/main-view/mainpage.html
+++ b/views/main-view/mainpage.html
@@ -1,5 +1,6 @@
 <!-- TODO: Implement NavBar only showing when scrolled past the two buttons below the subtitle text -->
 <!-- TODO: Implement the buttons working at all -->
+<!-- TODO: Add a about me button -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,24 +9,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mainpage</title>
     <link rel="stylesheet" href="mainpage.css">
-    <script src="mainpage.js"></script>
 </head>
 <body>
     <div class="topnav">
+        <a href="https://github.com/Moritz-Grimm/Moritz-Grimm.github.io">
+            <img id="github-logo" src="/assets/icons/github-icon-white.svg" alt="GitHub Logo" class="github-logo">
+        </a> 
         <a href="#home" class="active">Home</a>
+        <a href="#about">About Me</a>
         <a href="#contact">Contact</a> 
+        <a href="#projects">Projects</a>
     </div>
 
     <div class="stars-container" id="starsContainer"></div>
     <section class="hero">
         <div class="hero-content">
-            <h1 id="welcomeText"></h1>
-            <h2 id="hero-text"></h2>
+            <h1 id="welcomeText" aria-hidden="true"></h1>
+            <h2 id="hero-text" aria-hidden="true"></h2>
             <div class="hero-buttons">
                 <a href="#projects" class="btn primary">My projects</a>
-                <a href="contact" class="btn secondary">Contact</a>
+                <a href="#contact" class="btn secondary">Contact</a>
             </div>
         </div>
     </section>
+    <script src="mainpage.js"></script>
 </body>
 </html>
