--- a/views/main-view/mainpage.html
+++ b/views/main-view/mainpage.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal portfolio and projects website - Coming Soon">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title>Coming Soon™</title>
     <link rel="stylesheet" href="mainpage.css">
 </head>
@@ -26,25 +29,7 @@
             </a>
         </div>
     </div>
-    <script>
-        function createParticles() {
-            const particlesContainer = document.getElementById('particles');
-            const particleCount = 30;
-
-            for (let i = 0; i < particleCount; i++) {
-                const particle = document.createElement('div');
-                particle.className = 'particle';
-
-                particle.style.left = Math.random() * 100 + '%';
-                particle.style.top = Math.random() * 100 + '%';
-
-                particle.style.animationDelay = Math.random() * 8 + 's';
-                particle.style.animationDuration = (Math.random() * 4 + 6) + 's';
-
-                particlesContainer.appendChild(particle);
-            }
-        }
-    </script>
+    <script src="mainpage.js" defer></script>
 </body>
 
 </html>
